<resources>
    <string name="app_name">PillarBaseApp</string>
    <string name="input_option">Adatok fájlból beolvasása</string>
    <string name="project_process_option">Alap megnyitása/törlése</string>
    <string name="next_fragment">Következő oldalra</string>
    <string name="weight_base_option">Súlyalap</string>
    <string name="plate_base_option">Lemezalap</string>
    <string name="ticked_weight_base_option">Súlyalap ✔️</string>
    <string name="ticked_plate_base_option">Lemezalap ✔️</string>
    <string name="start_gps">GPS start</string>
    <string name="stop_gps">GPS stop</string>
    <string name="north_pole">North Pole Arrow</string>
    <string name="exit_option">Kilépés</string>
    <!-- Strings used for fragments for navigation -->
    <string name="project_file_name_label"></string>
    <string name="text_project_name">Alap neve</string>
    <string name="set_place_of_pillar">Az oszlop adatainak megadása</string>
    <string name="set_place_of_start_pillar">A kiinduló oszlop adatainak megadása</string>
    <string name="text_distance_of_new_pillar">Az új oszlop távolságainak megadása</string>
    <string name="set_id_of_pillar">Az oszlop azonosítója</string>
    <string name="first_coordinate">1. koordináta</string>
    <string name="second_coordinate">2. koordináta</string>
    <string name="set_next_prev_pillar">Az előző/következő oszlop adatainak megadása</string>
    <string name="set_base_geometry_data">Az alap geometriai adatainak megadása</string>
    <string name="distance_of_direction_points">Az iránypontok távolsága</string>
    <string name="distance_of_legs_perpendicularly">Karra merőleges lábtávolság</string>
    <string name="distance_of_legs_parallel">Karral párhuzamos lábtávolság</string>
    <string name="distance_of_hole_perpendicularly">Karra merőleges gödörméret</string>
    <string name="distance_of_hole_parallel">Karral párhuzamos gödörméret</string>
    <string name="angle_between_main_lines">A nyomvonal által közbezárt</string>
    <string name="distance_from_side_of_hole_of_base_parallel">Karral párhuzamos irány távolság</string>
    <string name="distance_from_side_of_hole_of_base_perpendicularly">Karra merőleges irány távolság</string>
    <string name="save_data_format">Koordináták fájlba mentése</string>
    <string name="format_of_TPS">TPS formátum</string>
    <string name="format_of_RTK">RTK formátum</string>
    <string name="calc_foot_distance_option">Lábtávolság számítása</string>
    <string name="value_of_foot_distance">Lábtávolság értéke</string>
    <string name="value_of_illesztesi_sik">Illesztési sík értéke</string>
    <string name="value_of_sudarasodas">Sudarasodás értéke</string>
    <string name="millimeter">mm</string>
    <string name="centimeter">cm</string>
    <string name="meter">m</string>
    <string name="sudarasodas">mm/m</string>
    <string name="foot1">1. láb</string>
    <string name="foot2">2. láb</string>
    <string name="foot3">3. láb</string>
    <string name="foot4">4. láb</string>
    <string name="send">Küldés</string>
    <string name="calcMirrorCase">Tükörkép számítása"</string>
    <string name="ok_text">OK</string>
    <string name="delete_base_data">Alap adatok törlése</string>
    <string name="meas_base_data_text">Alap kitűzési adatok</string>
    <string name="meas_base_statistics_text">Kitűzött alapok statisztika</string>
    <string name="number_of_base_of_project">Alapok darabszáma</string>
    <string name="measured_base_hole">Gödör kitűzve</string>
    <string name="measured_base_axis">Tengely kitűzve</string>
    <string name="number_of_measured">Kitűzések száma</string>
    <string name="save_statistics_text">Projekt statisztika mentése</string>
    <string name="left_side">bal oldali,</string>
    <string name="right_side">jobb oldali szög</string>
    <string name="angle_180">180</string>
    <string name="angle_0">0</string>
    <string name="degree">°</string>
    <string name="angle_min">\'</string>
    <string name="angle_sec">\'\'</string>
    <string name="pie_chart">Kitűzött alapok diagramja</string>
    <string name="delete_project_bases">Projekt alapok törlése</string>
    <string name="name_of_input_files">Betöltendő fájl(ok) név kezdete</string>
    <string name="delete_input_files">Betöltendő fájlok törlése</string>
    <string name="save_pillar_center">Oh közép WGS mentése</string>
    <string name="abscissa">Abcissza [m]</string>
    <string name="ordinate">Ordináta [m]</string>
    <string name="control_point">Kontroll pont</string>
    <string name="control_point_id">Azonosító</string>
</resources>