<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/foot_calc_popup_style">

    <TextView
        android:id="@+id/text_calc_foot_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/calc_foot_distance_option"
        android:textColor="?attr/colorPrimary"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/topDivider"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_calc_foot_distance" />

    <EditText
        android:id="@+id/input_value_of_foot_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/value_of_foot_distance"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textColor="@color/data_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topDivider"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_mm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:text="@string/millimeter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/input_value_of_foot_distance"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/input_value_illesztesi_sik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/value_of_illesztesi_sik"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textColor="@color/data_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_of_foot_distance"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:text="@string/centimeter"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toEndOf="@+id/input_value_illesztesi_sik"
        app:layout_constraintTop_toBottomOf="@+id/text_mm"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/input_value_sudarasodas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:ems="13"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:hint="@string/value_of_sudarasodas"
        android:inputType="numberDecimal"
        android:maxLength="8"
        android:textColor="@color/data_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_illesztesi_sik"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/text_mm_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-light"
        android:inputType="text"
        android:text="@string/sudarasodas"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/input_value_sudarasodas"
        app:layout_constraintTop_toBottomOf="@+id/text_cm"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Számol"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_value_sudarasodas" />

    <TextView
        android:id="@+id/result_foot_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:textSize="16dp"
        android:textStyle="bold"
        android:textIsSelectable="true"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toEndOf="@+id/text_calc_foot_distance"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>